[package]
authors = ["ClSlaid <cailue@bupt.edu.cn>"]
description = "[WIP] A DNS server supporting UDP, TCP, TLS and QUIC."
edition = "2021"
name = "tsein-dns"
version = "0.1.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
futures-lite = "1.12"

[dependencies]
async-trait = "0.1"
async-recursion = "1.0"
anyhow = "1.0"
rand = "0.8"
bytes = "1.1"
color-eyre = "0.6"
quinn = "0.8"
thiserror = "1.0"
futures = "0.3"
rustls = "0.20"
rustls-pemfile = "1.0"
rustls-native-certs = "0.6"
tokio = { version = "1.19", features = ["full"] }
tokio-rustls = "0.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "std",
  "time",
  "fmt",
  "local-time",
] }
moka = { version = "0.9", features = ["future"] }
